--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,9 @@
 docs.json
 __dummy.html
 docs/
-/prueba-d
-prueba-d.so
-prueba-d.dylib
-prueba-d.dll
-prueba-d.a
-prueba-d.lib
-prueba-d-test-*
+./test-heroku
 *.exe
 *.o
 *.obj
 *.lst
+*~
